--- a/traditional.html
+++ b/traditional.html
@@ -23,7 +23,6 @@
     <nav class="site-nav text-center">
         <ul>
             <li><a href="about.html">ABOUT US</a></li>
-            <li><a href="design-service.html">DESIGN SERVICES</a></li>
             <li><a href="portfolio.html">PORTFOLIO</a></li>
             <li><a href="contact.html">CONTACT US</a></li>
         </ul>
@@ -105,7 +104,7 @@
             </div>
             <div class="mySlides">
                 <div class="numbertext">6 / 20</div>
-                <img src="images/A-Traditional/Rossmore/F.jpg" style="width:100%">
+                <img src="images/A-Traditional/Rossmore/F.jpg" style="width:100%; height:800px;">
             </div>
             <div class="mySlides">
                 <div class="numbertext">7 / 20</div>
@@ -113,7 +112,7 @@
             </div>
             <div class="mySlides">
                 <div class="numbertext">8 / 20</div>
-                <img src="images/A-Traditional/Rossmore/H.jpg" style="width:100%">
+                <img src="images/A-Traditional/Rossmore/H.jpg" style="width:100%; height:800px;">
             </div>
             <div class="mySlides">
                 <div class="numbertext">9 / 20</div>
@@ -223,7 +222,7 @@
         </div>
     </footer>
 
-    <!--<script>
+    <script>
 // Open the Modal
 function openModal() {
   document.getElementById('myModal').style.display = "block";
@@ -263,7 +262,7 @@ function showSlides(n) {
   dots[slideIndex-1].className += " active";
   captionText.innerHTML = dots[slideIndex-1].alt;
 }
-</script>-->
+</script>
 
 
 
